@@ -5,6 +5,7 @@ core:
 
 === Edge
 
+* Mario Visic
 * Andrew Cates
 * Janne Asmala
 * Keith Bingman
